--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -67,8 +67,17 @@ transportation.in=\u0412\u044A\u0435\u0437\u0434
 transportation.time.out=\u0412\u0440\u0435\u043C\u044F \u0432\u044B\u0435\u0437\u0434\u0430
 transportation.out=\u0412\u044B\u0435\u0437\u0434
 title.weight.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0432\u0435\u0441\u0430
+title.vehicle.driver.input=\u0412\u0432\u043E\u0434 \u0434\u0430\u043D\u043D\u044B\u0445 \u043E \u043C\u0430\u0448\u0438\u043D\u0435
 weight.brutto=\u0411\u0440\u0443\u0442\u0442\u043E
 weight.tara=\u0422\u0430\u0440\u0430
 weight.netto=\u041D\u0435\u0442\u0442\u043E
 button.close=\u0417\u0430\u043A\u0440\u044B\u0442\u044C
 button.edit=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C
+transportation.automobile.model=\u041C\u043E\u0434\u0435\u043B\u044C
+transportation.automobile.number=\u041D\u043E\u043C\u0435\u0440
+transportation.automobile.trailer=\u041F\u0440\u0438\u0446\u0435\u043F
+label.requaired=\u041E\u0431\u044F\u0437\u0430\u0442\u0435\u043B\u044C\u043D\u043E \u043A \u0437\u0430\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044E
+person.surname=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
+person.forename=\u0418\u043C\u044F
+person.patronymic=\u041E\u0442\u0447\u0435\u0441\u0442\u0432\u043E
+transportation.transporter=\u041F\u0435\u0440\u0435\u0432\u043E\u0437\u0447\u0438\u043A
