--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -13,7 +13,7 @@ deal.sell=\u041F\u0440\u043E\u0434\u0430\u0436\u0430
 document.create=\u041D\u043E\u0432\u044B\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
 document.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 forgot=\u041D\u0435 \u043F\u043E\u043C\u043D\u044E \u043F\u0430\u0440\u043E\u043B\u044C
-menu.admin=\u0410\u0434\u043C\u0438\u043D\u043A\u0430
+menu.admin=\u0410\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435
 menu.deals=\u041A\u043E\u043D\u0442\u0440\u0430\u043A\u0442\u044B
 menu.laboratory=\u041B\u0430\u0431\u043E\u0440\u0430\u0442\u043E\u0440\u0438\u044F
 menu.logistic=\u041B\u043E\u0433\u0438\u0441\u0442\u0438\u043A\u0430
@@ -75,9 +75,9 @@ no.data=\u041D\u0435\u0442 \u0434\u0430\u043D\u043D\u044B\u0445
 title.transport.show=\u0414\u0430\u043D\u043D\u044B\u0435 \u043F\u043E \u043C\u0430\u0448\u0438\u043D\u0435
 title.weight.list=\u0412\u0435\u0441\u043E\u0432\u0430\u044F
 title.subdivision.list=\u0410\u043D\u0430\u043B\u0438\u0437\u044B \u043F\u043E \u0446\u0435\u0445\u0430\u043C
-title.subdivision.list.ex=\u0410\u043D\u0430\u043B\u0438\u0437\u044B \u0441\u044B\u0440\u044C\u044F \u043F\u043E \u0446\u0435\u0445\u0443 \u042D\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0438\u0438
-title.subdivision.list.vro=\u0410\u043D\u0430\u043B\u0438\u0437\u044B \u0441\u044B\u0440\u044C\u044F \u043F\u043E \u0446\u0435\u0445\u0443 \u0412\u0420\u041E
-title.subdivision.list.kpo=\u0410\u043D\u0430\u043B\u0438\u0437\u044B \u0441\u044B\u0440\u044C\u044F \u043F\u043E \u0446\u0435\u0445\u0443 \u041A\u041F\u041E
+title.subdivision.list.ex=\u042D\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0438\u044F
+title.subdivision.list.vro=\u0412\u0420\u041E
+title.subdivision.list.kpo= \u041A\u041F\u041E
 title.extraction.crude.edit=\u0412\u0445\u043E\u0434\u044F\u0449\u0435\u0435 \u0441\u044B\u0440\u044C\u0435 \u042D\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0438\u0438
 transportation.time.in=\u0412\u0440\u0435\u043C\u044F \u0437\u0430\u0435\u0437\u0434\u0430
 transportation.in=\u0412\u044A\u0435\u0437\u0434
@@ -133,10 +133,15 @@ extraction.raw=\u041F\u0440\u043E\u0442\u044D\u0438\u043D \u0438 \u043A\u043B\u0
 time=\u0412\u0440\u0435\u043C\u044F
 extraction.oil=\u042D\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0438\u043E\u043D\u043D\u043E\u0435 \u043C\u0430\u0441\u043B\u043E
 extraction.crude.humidity.income=\u0412\u043B\u0430\u0436\u043D\u043E\u0441\u0442\u044C \u0436\u043C\u044B\u0445\u0430
+extraction.crude.humidity.income.short=\u0412\u043B. \u0436\u043C\u044B\u0445\u0430
 extraction.crude.small.fraction=% \u043C\u0435\u043B\u043A\u043E\u0439 \u0444\u0440\u0430\u043A\u0446\u0438\u0438
+extraction.crude.small.fraction.short=% \u043C. \u0444\u0440\u0430\u043A\u0446\u0438\u0438
 extraction.crude.miscellas=\u041A\u043E\u043D\u0446\u0435\u043D\u0442\u0440\u0430\u0446\u0438\u044F \u043C\u0438\u0441\u0446\u0435\u043B\u0438
+extraction.crude.miscellas.short=\u041A\u043E\u043D\u0446. \u043C\u0438\u0441\u0446\u0435\u043B\u0438
 extraction.crude.humidity=\u041C.\u0447. \u0432\u043B\u0430\u0436\u043D\u043E\u0441\u0442\u0438
+extraction.crude.humidity.short=% \u0432\u043B\u0430\u0436\u043D\u043E\u0441\u0442\u0438
 extraction.crude.dissolvent=% \u0440\u0430\u0441\u0442\u0432\u043E\u0440\u0438\u0442\u0435\u043B\u044F
+extraction.crude.dissolvent.short=% \u0440\u0430\u0441\u0442-\u043B\u044F
 extraction.crude.grease=\u041C.\u0447. \u0436\u0438\u0440\u0430
 title.extraction.raw.edit=\u042D\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0438\u043E\u043D\u043D\u044B\u0435 \u041F\u0440\u043E\u0442\u0435\u0438\u043D/\u043A\u043B\u0435\u0442\u0447\u0430\u0442\u043A\u0430
 title.extraction.oil.edit=\u042D\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0438\u043E\u043D\u043D\u043E\u0435 \u043C\u0430\u0441\u043B\u043E
@@ -171,4 +176,5 @@ seal.quantity=\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E
 seal.preview=\u041F\u0440\u0435\u0434\u043F\u0440\u043E\u0441\u043C\u043E\u0442\u0440
 deal=\u041A\u043E\u043D\u0442\u0440\u0430\u043A\u0442
 all=\u0412\u0441\u0435
+turn=\u0421\u043C\u0435\u043D\u0430
 
