--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -214,7 +214,11 @@ husk.percent=% \u043B\u0443\u0437\u0433\u0438
 sun.contamination=\u0417\u0430\u0440\u0430\u0436\u0435\u043D\u043E \u0432\u0440\u0435\u0434\u0438\u0442\u0435\u043B\u044F\u043C\u0438
 deal.amount=\u0421\u0443\u043C\u043C\u0430 \u0441\u0434\u0435\u043B\u043A\u0438
 title.transport.archive=\u0422\u0440\u0430\u043D\u0441\u043F\u043E\u0440\u0442\u043D\u044B\u0439 \u0430\u0440\u0445\u0438\u0432
-title.transport.archive.transportation=\u0410\u0440\u0445\u0438\u0432 \u0442\u0440\u0430\u043D\u0441\u043F\u043E\u0440\u0442\u0430
+title.transport.archive.summary=\u0421\u0432\u043E\u0434\u043D\u0430\u044F::\u0410\u0440\u0445\u0438\u0432
+title.transport.archive.weight=\u0412\u0435\u0441\u043E\u0432\u0430\u044F::\u0410\u0440\u0445\u0438\u0432
+title.transport.archive.laboratory_buy=\u0412\u0445\u043E\u0434\u044F\u0449\u0435\u0435 \u0441\u044B\u0440\u044C\u0435::\u0410\u0440\u0445\u0438\u0432
+title.transport.archive.laboratory_sell=\u041E\u0442\u0433\u0440\u0443\u0437\u043A\u0438::\u0410\u0440\u0445\u0438\u0432
+title.transport.archive.transportation=\u0422\u0440\u0430\u043D\u0441\u043F\u043E\u0440\u0442::\u0410\u0440\u0445\u0438\u0432
 transportation.new=\u041D\u043E\u0432\u044B\u0439
 edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 title.personal=\u041B\u0438\u0447\u043D\u044B\u0439 \u043A\u0430\u0431\u0438\u043D\u0435\u0442
@@ -282,6 +286,8 @@ bot.notificator.netto=\u041D\u0435\u0442\u0442\u043E: %1$,.2f
 bot.notificator.humidity=\u0412\u043B\u0430\u0436\u043D\u043E\u0441\u0442\u044C: %1$,.2f
 bot.notificator.soreness=\u0421\u043E\u0440\u043D\u043E\u0441\u0442\u044C: %1$,.2f
 bot.notificator.oiliness=\u041C\u0430\u0441\u043B\u0438\u0447\u043D\u043E\u0441\u0442\u044C: %1$,.2f
+bot.notificator.protein=\u041F\u0440\u043E\u0442\u0435\u0438\u043D: %1$,.2f
+bot.notificator.cellulose=\u041A\u043B\u0435\u0442\u0447\u0430\u0442\u043A\u0430: %1$,.2f
 bot.notificator.oil.impurity=\u041C\u0430\u0441\u043B\u0438\u0447\u043D\u0430\u044F \u043F\u0440\u0438\u043C\u0435\u0441\u044C: %1$,.2f
 bot.notificator.oil.acid=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u043E\u0435 \u0447\u0438\u0441\u043B\u043E: %1$,.2f
 bot.notificator.color=\u0426\u0432\u0435\u0442\u043D\u043E\u0435 \u0447\u0438\u0441\u043B\u043E: %d
@@ -334,7 +340,9 @@ change.plan.deal.new=Id \u0441\u0434\u0435\u043B\u043A\u0438: %1$s
 change.plan.deal.edit=Id \u0441\u0434\u0435\u043B\u043A\u0438 %2$s \u0438\u0437\u043C\u0435\u043D\u0435\u043D \u043D\u0430 %1$s
 change.plan.from.new=\u041E\u0442 %1$s
 change.transportation.driver.new=\u0414\u043E\u0431\u0430\u0432\u043B\u0435\u043D \u0432\u043E\u0434\u0438\u0442\u0435\u043B\u044C %1$s
+change.transportation.vehicle.delete=\u0423\u0434\u0430\u043B\u0435\u043D\u0430 \u043C\u0430\u0448\u0438\u043D\u0430 %2$s
 change.transportation.vehicle.new=\u0414\u043E\u0431\u0430\u0432\u043B\u0435\u043D\u0430 \u043C\u0430\u0448\u0438\u043D\u0430 %1$s
+change.transportation.driver.delete=\u0423\u0434\u0430\u043B\u0435\u043D \u0432\u043E\u0434\u0438\u0442\u0435\u043B\u044C %2$s
 change.transportation.vehicle.edit=\u0418\u0437\u043C\u0435\u043D\u0435\u043D\u0430 \u043C\u0430\u0448\u0438\u043D\u0430 \u0441 %2$s \u043D\u0430 %1$s
 change.transportation.in.new=\u0412\u0440\u0435\u043C\u044F \u0437\u0430\u0435\u0437\u0434\u0430 %1$s
 change.transportation.out.new=\u0412\u0440\u0435\u043C\u044F \u0432\u044B\u0435\u0437\u0434\u0430 %1$s
