--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -404,3 +404,6 @@ title.extraction.storage.grease=\u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u044
 extraction.turn.grease.title=#    \u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u0440 \u0437\u0430 \u0441\u043C\u0435\u043D\u0443    #
 extraction.turn.grease.grease=\u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u0440: %1$s
 extraction.storage.grease.title=#    \u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u0440 \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0435    #
+forpress.cake.title=#    \u0424\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u0430 \u043C\u0430\u043A\u0443\u0445\u0430    #
+print.daily.report=\u0414\u043E\u0431\u043E\u0432\u0438\u0439 \u0437\u0432\u0456\u0442
+title.extraction.daily.report.print=\u0414\u0440\u0443\u043A \u0434\u043E\u0431\u043E\u0432\u043E\u0433\u043E \u0437\u0432\u0456\u0442\u0443
