--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -130,7 +130,7 @@ find=\u041F\u043E\u0448\u0443\u043A
 button.do=\u0417\u0440\u043E\u0431\u0438\u0442\u0438
 sun.humidity=\u0412\u043E\u043B\u043E\u0433\u0430
 sun.humidity.short=\u0412\u043E\u043B.
-sun.soreness=\u0417\u0430\u0441\u043C\u0456\u0447\u0435\u043D\u043D\u0456\u0439\u0441\u0442\u044C
+sun.soreness=\u0421\u043C\u0456\u0442. \u0434\u043E\u043C.
 sun.oil.impurity=\u041E\u043B\u0456\u0439\u043D\u0430 \u0434\u043E\u043C\u0456\u0448\u043A\u0430
 sun.oiliness=\u041E\u043B\u0456\u0439\u043D\u0456\u0441\u0442\u044C
 sun.oiliness.short=\u041C.\u0427.\u041E
@@ -200,8 +200,8 @@ all=\u0412\u0441\u0456
 turn=\u0417\u043C\u0456\u043D\u0430
 vro.huskiness=\u041B\u0443\u0437\u0436\u0438\u0441\u0442\u0456\u0441\u0442\u044C
 vro.kernel.offset=\u0412\u0438\u043D\u0456\u0441 \u044F\u0434\u0440\u0430
-vro.pulp.humidity.1=\u0412\u043E\u043B\u043E\u0433\u0430 \u043C\u0435\u0437\u0433\u0438 1
-vro.pulp.humidity.2=\u0412\u043E\u043B\u043E\u0433\u0430 \u043C\u0435\u0437\u0433\u0438 2
+vro.pulp.humidity.1=\u0412\u043E\u043B. \u043C\u0435\u0437\u0433\u0438 1
+vro.pulp.humidity.2=\u0412\u043E\u043B. \u043C\u0435\u0437\u0433\u0438 2
 forpress.cake=\u0424\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u0430 \u043C\u0430\u043A\u0443\u0445\u0430
 forpress=\u0424\u043E\u0440\u043F\u0440\u0435\u0441
 vro.daily=\u0414\u043E\u0431\u043E\u0432\u0456 \u0430\u043D\u0430\u043B\u0456\u0437\u0438
@@ -355,7 +355,7 @@ change.weight.brutto.edit=\u0411\u0440\u0443\u0442\u0442\u043E \u0438\u0437\u043
 change.transportation.archive.in.edit=\u041E\u0442\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u043E \u0432 \u0430\u0440\u0445\u0456\u0432
 change.transportation.archive.out.edit=\u0418\u0437\u0432\u043B\u0435\u0447\u0435\u043D\u043E \u0438\u0437 \u0430\u0440\u0445\u0456\u0432\u0430
 extraction.title=#    \u0426\u0435\u0445 \u044D\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0438\u0438    #
-extraction.turn=\u0421\u043C\u0435\u043D\u0430 #%1$s %2$s, \u0412\u0440\u0435\u043C\u044F %3$s
+extraction.turn=\u0417\u043C\u0456\u043D\u0430 #%1$s %2$s, \u0427\u0430\u0441 %3$s
 extraction.humidity.income=\u0412\u043B\u0430\u0433\u0430 \u0432\u0445\u043E\u0434\u044F\u0449\u0435\u0433\u043E \u0444\u043E\u0440\u043F\u0440\u0435\u0441\u0441\u043E\u0432\u043E\u0433\u043E \u0436\u043C\u044B\u0445\u0430: %1$s
 extraction.fraction=\u041C\u0435\u043B\u043A\u0430\u044F \u0444\u0440\u0430\u043A\u0446\u0438\u044F \u0432 \u0444\u043E\u0440\u043F\u0440\u0435\u0441\u0441\u043E\u0432\u043E\u043C \u0436\u043C\u044B\u0445\u0435: %1$s
 extraction.dissolvent=\u0421\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435 \u0433\u0435\u043A\u0441\u0430\u043D\u0430 \u0432 \u0448\u0440\u043E\u0442\u0435: %1$s
@@ -363,17 +363,17 @@ extraction.miscellas=\u041A\u043E\u043D\u0446\u0435\u043D\u0442\u0440\u0430\u044
 extraction.humidity=\u0412\u043B\u0430\u0433\u0430 \u0448\u0440\u043E\u0442\u0430: %1$s
 extraction.oiliness=\u041C.\u0427.\u041C \u0432 \u0448\u0440\u043E\u0442\u0435: %1$s
 extraction.meal=\u0428\u0440\u043E\u0442
-vro.title=\u0426\u0435\u0445 \u0412\u0420\u041E
-vro.humidity.before=\u0412\u043B\u0430\u0433\u0430 \u043F\u043E\u0434\u0441\u043E\u043B\u043D\u0435\u0447\u043D\u0438\u043A\u0430 \u0434\u043E \u043E\u0447\u0438\u0441\u0442\u043A\u0438: %1$s
-vro.soreness.before=\u0421\u043E\u0440\u043D\u0430\u044F \u043F\u0440\u0438\u043C\u0435\u0441\u044C \u0434\u043E \u043E\u0447\u0438\u0441\u0442\u043A\u0438: %1$s
-vro.humidity.after=\u0412\u043B\u0430\u0433\u0430 \u043F\u043E\u0434\u0441\u043E\u043B\u043D\u0435\u0447\u043D\u0438\u043A\u0430 \u043F\u043E\u0441\u043B\u0435 \u043E\u0447\u0438\u0441\u0442\u043A\u0438: %1$s
-vro.soreness.after=\u0421\u043E\u0440\u043D\u0430\u044F \u043F\u0440\u0438\u043C\u0435\u0441\u044C \u043F\u043E\u0441\u043B\u0435 \u043E\u0447\u0438\u0441\u0442\u043A\u0438: %1$s
-vro.pulp.1=\u0412\u043B\u0430\u0433\u0430 \u043C\u0435\u0437\u0433\u0438 I: %1$s
-vro.pulp.2=\u0412\u043B\u0430\u0433\u0430 \u043C\u0435\u0437\u0433\u0438 II: %1$s
-vro.forpress.humidity=\u0424\u043E\u0440\u043F\u0440\u0435\u0441 %1$s \u0432\u043B\u0430\u0433\u0430: %1$s
-vro.forpress.oiliness=\u0424\u043E\u0440\u043F\u0440\u0435\u0441 %1$s \u041C.\u0427.\u041C.: %1$s
-vro.kernel.offset.2=\u0412\u044B\u043D\u043E\u0441 \u044F\u0434\u0440\u0430: %1$s
-vro.huskiness.2=\u041B\u0443\u0437\u0436\u0438\u0441\u0442\u043E\u0441\u0442\u044C: %1$s
+notification.vro.title=#    \u0426\u0435\u0445 \u0412\u0420\u041E    #
+notification.vro.before=*\u0414\u043E \u043E\u0447\u0438\u0441\u0442\u043A\u0438*
+notification.vro.after=*\u041F\u0456\u0441\u043B\u044F \u043E\u0447\u0438\u0441\u0442\u043A\u0438*
+notification.vro.humidity=\t    \u0412\u043E\u043B\u043E\u0433\u043E \u043D\u0430\u0441\u0456\u043D\u043D\u044F: %1$s
+notification.vro.soreness=\t    \u0421\u043C\u0456\u0442\u0442\u0454\u0432\u0430 \u0434\u043E\u043C\u0456\u0448\u043A\u0430: %1$s
+notification.vro.pulp.1=\u0412\u043E\u043B\u043E\u0433\u0430 \u043C\u0435\u0437\u0433\u0438 1: %1$s
+notification.vro.pulp.2=\u0412\u043E\u043B\u043E\u0433\u0430 \u043C\u0435\u0437\u0433\u0438 2: %1$s
+notification.vro.forpress.humidity=\u0424\u043E\u0440\u043F\u0440\u0435\u0441 %1$s \u0432\u043B\u0430\u0433\u0430: %1$s
+notification.vro.forpress.oiliness=\u0424\u043E\u0440\u043F\u0440\u0435\u0441 %1$s \u041C.\u0427.\u041C.: %1$s
+notification.vro.kernel.offset.2=\u0412\u0438\u043D\u0456\u0441 \u044F\u0434\u0440\u0430: %1$s
+notification.vro.huskiness.2=\u041B\u0443\u0437\u0436\u0438\u0441\u0442\u0456\u0441\u0442\u044C: %1$s
 extraction.turn.crude=\u041F\u0440\u043E\u0442\u044D\u0438\u043D \u0437\u0430 \u0441\u043C\u0435\u043D\u0443
 title.extraction.turn.crude=\u041F\u0440\u043E\u0442\u0435\u0438\u043D \u0437\u0430 \u0441\u043C\u0435\u043D\u0443
 extraction.daily.crude=\u041F\u0440\u043E\u0442\u0435\u0438\u043D \u0437\u0430 \u0441\u0443\u0442\u043A\u0438
@@ -397,17 +397,17 @@ extraction.turn.protein.title=#    \u041F\u0440\u043E\u0442\u044D\u0438\u043D \u
 extraction.turn.protein.turn=\u0421\u043C\u0435\u043D\u0430 #%1$s \u0437\u0430 %2$s
 extraction.turn.protein.protein=\u0421\u044B\u0440\u043E\u0439 \u043F\u0440\u043E\u0442\u044D\u0438\u043D: %1$s
 extraction.turn.protein.humidity=\u0412\u043B\u0430\u0433\u0430: %1$s
-menu.extraction.turn.protein=\u041F\u0440\u043E\u0442\u044D\u0438\u043D \u0437\u0430 \u0441\u043C\u0435\u043D\u0443
-menu.extraction.storage.protein=\u041F\u0440\u043E\u0442\u044D\u0438\u043D \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0435
-menu.extraction.turn.raw.grease=\u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u0440 \u0437\u0430 \u0441\u043C\u0435\u043D\u0443
+menu.extraction.turn.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D \u0437\u0430 \u0437\u043C\u0456\u043D\u0443
+menu.extraction.storage.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0456
+menu.extraction.turn.raw.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u0437\u0430 \u0437\u043C\u0456\u043D\u0443
 menu.extraction.storage.raw.grease=\u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u0440 \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0435
-title.extraction.turn.grease=\u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u0440 \u0437\u0430 \u0441\u043C\u0435\u043D\u0443
-extraction.raw.grease=\u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u0440
-title.extraction.storage.grease=\u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u0440 \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0435
+title.extraction.turn.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u0437\u0430 \u0437\u043C\u0456\u043D\u0443
+extraction.raw.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440
+title.extraction.storage.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0456
 extraction.turn.grease.title=#    \u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u0440 \u0437\u0430 \u0441\u043C\u0435\u043D\u0443    #
-extraction.turn.grease.grease=\u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u0440: %1$s
-extraction.storage.grease.title=\#    \u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u0440 \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0435    \#
-forpress.cake.title=#    \u0424\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u0430 \u043C\u0430\u043A\u0443\u0445\u0430    #
+extraction.turn.grease.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440: %1$s
+extraction.storage.grease.title=#    \u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0456    #
+notification.forpress.cake.title=#    \u0424\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u0430 \u043C\u0430\u043A\u0443\u0445\u0430    #
 print.daily.report=\u0414\u043E\u0431\u043E\u0432\u0438\u0439 \u0437\u0432\u0456\u0442
 title.extraction.daily.report.print=\u0414\u0440\u0443\u043A \u0434\u043E\u0431\u043E\u0432\u043E\u0433\u043E \u0437\u0432\u0456\u0442\u0443
 oil.mass.fraction=\u041C\u0430\u0441\u043E\u0432\u0430 \u0447\u0430\u0441\u0442\u043A\u0430 \u043E\u043B\u0456\u0457
@@ -427,12 +427,12 @@ vro.part=\u0412\u0430\u0440\u043A\u0430
 title.vro.part.edit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043D\u043D\u044F \u0432\u0430\u0440\u043A\u0438
 oil.soap.yes=\u041F\u0440\u0438\u0441\u0443\u0442\u043D\u0454
 oil.soap.no=\u0412\u0456\u0434\u0441\u0443\u0442\u043D\u0454
-notification.vro.title=\#       \u041F\u0430\u0440\u0442\u0456\u044F \#%1$s        \#
-notification.vro.organoleptic=\u041E\u0440\u0433\u0430\u043D\u043E\u043B\u0435\u043F\u0442\u0438\u0447\u043D\u0456 \u043F\u043E\u043A\u0430\u0437\u043D\u0438\u043A\u0438\: %s
-notification.vro.organoleptic.yes=\u0412\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u044E\u0442\u044C \u041D\u0414
-notification.vro.organoleptic.no=\u043D\u0435 \u0432\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u044E\u0442\u044C \u041D\u0414
-notification.vro.acid=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u0435 \u0447\u0438\u0441\u043B\u043E\: %s
-notification.vro.peroxide=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u0435 \u0447\u0438\u0441\u043B\u043E\: %s
-notification.vro.soap=\u041C\u0438\u043B\u043E (\u044F\u043A\u0456\u0441\u043D\u0430 \u043F\u0440\u043E\u0431\u0430)\: %s
-notification.vro.soap.yes=\u0412\u0456\u0434\u0441\u0443\u0442\u043D\u0454
-notification.vro.soap.no=\u041F\u0440\u0438\u0441\u0443\u0442\u043D\u0454
+notification.kpo.title=\#       \u041F\u0430\u0440\u0442\u0456\u044F \#%1$s        \#
+notification.kpo.organoleptic=\u041E\u0440\u0433\u0430\u043D\u043E\u043B\u0435\u043F\u0442\u0438\u0447\u043D\u0456 \u043F\u043E\u043A\u0430\u0437\u043D\u0438\u043A\u0438\: %s
+notification.kpo.organoleptic.yes=\u0412\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u044E\u0442\u044C \u041D\u0414
+notification.kpo.organoleptic.no=\u043D\u0435 \u0432\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u044E\u0442\u044C \u041D\u0414
+notification.kpo.acid=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u0435 \u0447\u0438\u0441\u043B\u043E\: %s
+notification.kpo.peroxide=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u0435 \u0447\u0438\u0441\u043B\u043E\: %s
+notification.kpo.soap=\u041C\u0438\u043B\u043E (\u044F\u043A\u0456\u0441\u043D\u0430 \u043F\u0440\u043E\u0431\u0430)\: %s
+notification.kpo.soap.yes=\u0412\u0456\u0434\u0441\u0443\u0442\u043D\u0454
+notification.kpo.soap.no=\u041F\u0440\u0438\u0441\u0443\u0442\u043D\u0454
