--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -446,4 +446,13 @@ laboratory.turns=\u0413\u0440\u0430\u0444\u0456\u043A \u0437\u043C\u0456\u043D
 title.laboratory.turns=\u0413\u0440\u0430\u0444\u0456\u043A \u0437\u043C\u0456\u043D
 title.laboratory.turn.edit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043D\u043D\u044F \u0433\u0440\u0430\u0444\u0456\u043A\u0430 \u0437\u043C\u0456\u043D
 meal=\u0428\u0440\u043E\u0442
-print.month.report=\u0417\u0432\u0456\u0442 \u0437\u0430 \u043C\u0456\u0441\u044F\u0446\u044C
+print.monthly.report=\u0417\u0432\u0456\u0442 \u0437\u0430 \u043C\u0456\u0441\u044F\u0446\u044C
+title.monthly.print=\u0417\u0432\u0456\u0442 \u0437\u0430 \u043C\u0456\u0441\u044F\u0446\u044C
+month=\u041C\u0456\u0441\u044F\u0446\u044C
+title.laboratory.storages=\u0404\u043C\u043D\u043E\u0441\u0442\u0456
+title.laboratory.storage.edit=\u0410\u043D\u0430\u043B\u0456\u0437\u0438 \u043F\u043E \u0454\u043C\u043D\u043E\u0441\u0442\u044F\u0445
+storage.sun=\u0421\u043A\u043B\u0430\u0434
+storage.oil=\u0404\u043C\u043D\u0456\u0441\u0442\u044C
+storage.oilcake=\u0421\u043A\u043B\u0430\u0434
+storage.meal=\u0421\u043A\u043B\u0430\u0434
+oil.phosphorus.mass.fraction=\u041C.\u0427.\u0424
