--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -473,3 +473,4 @@ bot.user.registration.user=\u041F.\u0406.\u0411: %1$s
 bot.user.registration.role=\u0413\u0440\u0443\u043F\u0430 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432: %1$s
 bot.user.registration.email=Email: %1$s
 mean.short=\u0421\u0435\u0440\u0435\u0434\u043D\u0454
+empty.list=\u0426\u0435 \u043D\u043E\u0440\u043C\u0430\u043B\u044C\u043D\u043E. \u0422\u0443\u0442 \u043F\u0440\u043E\u0441\u0442\u043E \u043D\u0456\u0447\u043E\u0433\u043E \u043D\u0435\u043C\u0430
