--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -283,6 +283,8 @@ bot.notificator.brutto=\u0411\u0440\u0443\u0442\u0442\u043E: %1$,.2f
 bot.notificator.tara=\u0422\u0430\u0440\u0430: %1$,.2f
 bot.notificator.netto=\u041D\u0435\u0442\u0442\u043E: %1$,.2f
 bot.notificator.humidity=\u0412\u043E\u043B\u043E\u0433\u0430: %1$,.2f
+bot.notificator.humidity1=\u0412\u043E\u043B\u043E\u0433\u0430 \u043C\u0430\u0448\u0438\u043D\u0438: %1$,.2f
+bot.notificator.humidity2=\u0412\u043E\u043B\u043E\u0433\u0430 \u043F\u0440\u0438\u0446\u0435\u043F\u0430: %1$,.2f
 bot.notificator.soreness=\u0421\u043C\u0456\u0442\u0442\u0454\u0432\u0430 \u0434\u043E\u043C\u0456\u0448\u043A\u0430: %1$,.2f
 bot.notificator.oiliness=\u041E\u043B\u0456\u0439\u043D\u0456\u0441\u0442\u044C: %1$,.2f
 bot.notificator.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D: %1$,.2f
@@ -292,7 +294,7 @@ bot.notificator.oil.acid=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u0435 \u0447
 bot.notificator.color=\u041A\u043E\u043B\u0456\u0440\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %d
 bot.notificator.peroxide=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$,.2f
 bot.notificator.phosphorus=\u0424\u043E\u0441\u0444\u043E\u0440\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$,.2f
-bot.notificator.soap=\u041C\u0438\u043B\u043E (\u044F\u043A\u0456\u0441\u043D\u0430 \u043F\u0440\u043E\u0431\u0430): %1$,.2f
+bot.notificator.soap=\u041C\u0438\u043B\u043E (\u044F\u043A\u0456\u0441\u043D\u0430 \u043F\u0440\u043E\u0431\u0430): %1$s
 bot.notificator.wax=\u0412\u0456\u0441\u043A: %1$,.2f
 recount.percentage=% \u043F\u0435\u0440\u0435\u0440\u0430\u0445\u0443\u043D\u043A\u0443
 units=\u041E\u0434\u0438\u043D\u0438\u0446\u044F \u0432\u0438\u043C\u0456\u0440\u0443
@@ -455,8 +457,8 @@ storage.oil=\u0404\u043C\u043D\u0456\u0441\u0442\u044C
 storage.oilcake=\u0421\u043A\u043B\u0430\u0434
 storage.meal=\u0421\u043A\u043B\u0430\u0434
 oil.phosphorus.mass.fraction=\u041C.\u0427.\u0424
-sun.humidity.1=\u0412\u043E\u043B\u043E\u0433\u0430 \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0456\u043B\u044F
-sun.humidity.2=\u0412\u043E\u043B\u043E\u0433\u0430 \u043F\u0440\u0438\u0446\u0435\u043F\u0430
+sun.humidity.1=\u0412\u043E\u043B. \u0430.
+sun.humidity.2=\u0412\u043E\u043B. \u043F.
 laboratory.response=\u0412\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u043B\u044C\u043D\u0430 \u043E\u0441\u043E\u0431\u0430
 friend.registration=\u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438 \u0434\u0440\u0443\u0433\u0430
 subdivision=\u0413\u0440\u0443\u043F\u0430
