--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,3 +1,5 @@
+role.guest=\u0413\u043E\u0441\u0442\u044C
+role.guests=\u0413\u043E\u0441\u0442\u0438
 application.title=\u042D\u043B\u0435\u043A\u0442\u0440\u043E\u0436\u0443\u0440\u043D\u0430\u043B
 analyses.buy=\u0412\u0445\u043E\u0434\u044F\u0449\u0435\u0435 \u0441\u044B\u0440\u044C\u0435
 analyses.probe=\u041F\u0440\u043E\u0431\u044B
