--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -386,31 +386,31 @@ extraction.daily.crude=\u041F\u0440\u043E\u0442\u0435\u0438\u043D \u0437\u0430 \
 rail.shipment=\u0416\u0414 \u041E\u0442\u0433\u0440\u0443\u0437\u043A\u0438
 title.extraction.turn.protein=\u041F\u0440\u043E\u0442\u044D\u0438\u043D \u0437\u0430 \u0441\u043C\u0435\u043D\u0443
 title.extraction.storage.protein=\u041F\u0440\u043E\u0442\u044D\u0438\u043D \u0441\u043E \u0441\u043A\u043B\u0430\u0434\u0430
-laboratory.protein=\u041F\u0440\u043E\u0442\u044D\u0438\u043D
+laboratory.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D
 storage=\u0421\u043A\u043B\u0430\u0434
-extraction.raw.protein=\u0421\u044B\u0440\u043E\u0439 \u043F\u0440\u043E\u0442\u044D\u0438\u043D
+extraction.raw.protein=\u0421\u0438\u0440\u0438\u0439 \u043F\u0440\u043E\u0442\u0435\u0457\u043D
 extraction.storage.protein.title=%1$s, %2$s
-extraction.storage.protein=\u0421\u044B\u0440\u043E\u0439 \u043F\u0440\u043E\u0442\u044D\u0438\u043D: %1$s
-extraction.storage.humidity=\u0412\u043B\u0430\u0433\u0430: %1$s
-extraction.oil.title=#    \u042D\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0438\u043E\u043D\u043D\u043E\u0435 \u043C\u0430\u0441\u043B\u043E    #
-extraction.oil.turn=\u0421\u043C\u0435\u043D\u0430 #%1$s \u0437\u0430 %2$s
-extraction.oil.humidity=\u041C.\u0427. \u0432\u043B\u0430\u0433\u0438: %1$s
-extraction.oil.acid.value=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u043E\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
-extraction.oil.peroxide.value=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u043E\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
-extraction.oil.phosphorus.value=\u0424\u043E\u0441\u0444\u043E\u0440\u043D\u043E\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
-extraction.oil.explosion.t=\u0422\u0435\u043C\u043F\u0435\u0440\u0430\u0442\u0443\u0440\u0430 \u0432\u0441\u043F\u044B\u0448\u043A\u0438 \u044D\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0438\u043E\u043D\u043D\u043E\u0433\u043E \u043C\u0430\u0441\u043B\u0430: %1$s
-extraction.turn.protein.title=#    \u041F\u0440\u043E\u0442\u044D\u0438\u043D \u0437\u0430 \u0441\u043C\u0435\u043D\u0443    #
-extraction.turn.protein.turn=\u0421\u043C\u0435\u043D\u0430 #%1$s \u0437\u0430 %2$s
-extraction.turn.protein.protein=\u0421\u044B\u0440\u043E\u0439 \u043F\u0440\u043E\u0442\u044D\u0438\u043D: %1$s
-extraction.turn.protein.humidity=\u0412\u043B\u0430\u0433\u0430: %1$s
+extraction.storage.protein=\u0421\u0438\u0440\u0438\u0439 \u043F\u0440\u043E\u0442\u0435\u0457\u043D: %1$s
+extraction.storage.humidity=\u0412\u043E\u043B\u043E\u0433\u0430: %1$s
+extraction.oil.title=#    \u0415\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0456\u0439\u043D\u0430 \u043E\u043B\u0456\u044F    #
+extraction.oil.turn=\u0417\u043C\u0456\u043D\u0430 #%1$s \u0437\u0430 %2$s
+extraction.oil.humidity=\u041C.\u0427. \u0432\u043E\u043B\u043E\u0433\u0438: %1$s
+extraction.oil.acid.value=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
+extraction.oil.peroxide.value=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
+extraction.oil.phosphorus.value=\u0424\u043E\u0441\u0444\u043E\u0440\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
+extraction.oil.explosion.t=\u0422\u0435\u043C\u043F\u0435\u0440\u0430\u0442\u0443\u0440\u0430 \u0441\u043F\u0430\u043B\u0430\u0445\u0443 \u0435\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0456\u0439\u043D\u043E\u0457 \u043E\u043B\u0456\u0457: %1$s
+extraction.turn.protein.title=#    \u041F\u0440\u043E\u0442\u0435\u0457\u043D \u0437\u0430\u0437\u043C\u0456\u043D\u0443    #
+extraction.turn.protein.turn=\u0417\u043C\u0456\u043D\u0430 #%1$s \u0437\u0430 %2$s
+extraction.turn.protein.protein=\u0421\u0438\u0440\u0438\u0439 \u043F\u0440\u043E\u0442\u0435\u0457\u043D: %1$s
+extraction.turn.protein.humidity=\u0412\u043E\u043B\u043E\u0433\u0430: %1$s
 menu.extraction.turn.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D \u0437\u0430 \u0437\u043C\u0456\u043D\u0443
 menu.extraction.storage.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0456
 menu.extraction.turn.raw.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u0437\u0430 \u0437\u043C\u0456\u043D\u0443
-menu.extraction.storage.raw.grease=\u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u0440 \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0435
+menu.extraction.storage.raw.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0456
 title.extraction.turn.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u0437\u0430 \u0437\u043C\u0456\u043D\u0443
 extraction.raw.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440
 title.extraction.storage.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0456
-extraction.turn.grease.title=#    \u0421\u044B\u0440\u043E\u0439 \u0436\u0438\u0440 \u0437\u0430 \u0441\u043C\u0435\u043D\u0443    #
+extraction.turn.grease.title=#    \u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u0437\u0430 \u0437\u043C\u0456\u043D\u0443     #
 extraction.turn.grease.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440: %1$s
 extraction.storage.grease.title=#    \u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0456    #
 notification.forpress.cake.title=\#    \u0424\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u0430 \u043C\u0430\u043A\u0443\u0445\u0430    \#
@@ -421,9 +421,9 @@ oil.mass.fraction.dry=\u041C\u0430\u0441\u043E\u0432\u0430 \u0447\u0430\u0441\u0
 title.oil.mass.fraction=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043D\u043D\u044F \u041C\u0430\u0441\u043E\u0432\u0430 \u0447\u0430\u0441\u0442\u043A\u0430 \u043E\u043B\u0456\u0457
 title.oil.mass.fraction.dry=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043D\u043D\u044F \u0427\u041E \u043D\u0430 \u0441\u0443\u0445\u0443 \u0440\u0435\u0447\u043E\u0432\u0438\u043D\u0443
 oil.mass.fraction.seed=\u041D\u0430\u0441\u0456\u043D\u043D\u044F
-oil.mass.fraction.seed.humidity=\u0412\u043B\u0430\u0433\u0430 \u0441\u0435\u043C\u044F\u043D
+oil.mass.fraction.seed.humidity=\u0412\u043E\u043B\u043E\u0433\u0430 \u043D\u0430\u0441\u0456\u043D\u043D\u044F
 oil.mass.fraction.husk=\u041B\u0443\u0437\u0433\u0430
-oil.mass.fraction.husk.humidity=\u0412\u043B\u0430\u0433\u0430 \u043B\u0443\u0437\u0433\u0438
+oil.mass.fraction.husk.humidity=\u0412\u043E\u043B\u043E\u0433\u0430 \u043B\u0443\u0437\u0433\u0438
 menu.volumes=\u0404\u043C\u043D\u043E\u0441\u0442\u0456
 oilcake=\u041C\u0430\u043A\u0443\u0445\u0430
 oilcake.humidity=\u0412\u043E\u043B\u043E\u0433\u0430 \u043C\u0430\u043A\u0443\u0445\u0438
