--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     </string>
     <string name="messages">Messages</string>
     <string name="nav_menu">Navigation Menu</string>
+    <string name="notify">Notify</string>
 </resources>
