--- a/server/src/main/resources/messages_ru.properties
+++ b/server/src/main/resources/messages_ru.properties
@@ -390,7 +390,7 @@ extraction.storage.protein=\u0421\u044B\u0440\u043E\u0439 \u043F\u0440\u043E\u04
 extraction.storage.humidity=\u0412\u043B\u0430\u0433\u0430: %1$s
 extraction.oil.title=#    \u042D\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0438\u043E\u043D\u043D\u043E\u0435 \u043C\u0430\u0441\u043B\u043E    #
 extraction.oil.turn=\u0421\u043C\u0435\u043D\u0430 #%1$s \u0437\u0430 %2$s
-extraction.oil.humidity=\u041C.\u0427. \u0432\u043B\u0430\u0433\u0438: %1$s
+bot.extraction.oil.humidity=\u041C.\u0427. \u0432\u043B\u0430\u0433\u0438: %1$s
 extraction.oil.acid.value=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u043E\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
 extraction.oil.peroxide.value=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u043E\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
 extraction.oil.phosphorus.value=\u0424\u043E\u0441\u0444\u043E\u0440\u043D\u043E\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
@@ -555,3 +555,4 @@ nmr=\u042F\u041C\u0420
 select.date=\u0427\u0430\u0441 \u0432\u0456\u0434\u0431\u043E\u0440\u0443
 hours=\u0413\u043E\u0434\u0438\u043D\u0438
 minutes=\u0425\u0432.
+extraction.oil.humidity=\u0412\u043B\u0430\u0433\u0430 \u044D\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0438\u043E\u043D\u043D\u043E\u0433\u043E \u043C\u0430\u0441\u043B\u0430
