--- a/server/src/main/resources/messages_ua.properties
+++ b/server/src/main/resources/messages_ua.properties
@@ -154,19 +154,21 @@ extraction.crude=\u0412\u0445\u0456\u0434\u043D\u0430 \u0441\u0438\u0440\u043E\u
 extraction.raw=\u041F\u0440\u043E\u0442\u0435\u0457\u043D \u0456 \u043A\u043B\u0456\u0442\u043A\u043E\u0432\u0438\u043D\u0430
 time=\u0427\u0430\u0441
 extraction.oil=\u0415\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0456\u0439\u043D\u0430 \u043E\u043B\u0456\u044F
-extraction.crude.humidity.income=\u0412\u043E\u043B\u043E\u0433\u0430 \u043C\u0430\u043A\u0443\u0445\u0438
-extraction.crude.humidity.income.short=\u0412\u043E\u043B. \u043C\u0430\u043A\u0443\u0445\u0438
+extraction.crude.humidity.income=\u0412\u043E\u043B\u043E\u0433\u0430 \u0444\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u043E\u0457 \u043C\u0430\u043A\u0443\u0445\u0438
+extraction.crude.humidity.income.short=\u0412\u043E\u043B\u043E\u0433\u0430<br>\u043C\u0430\u043A\u0443\u0445\u0438
 extraction.crude.small.fraction=% \u0434\u0440\u0456\u0431\u043D\u043E\u0457 \u0444\u0440\u0430\u043A\u0446\u0456\u0457
-extraction.crude.small.fraction.short=% \u0434. \u0444\u0440\u0430\u043A\u0446\u0456\u0457
+extraction.crude.small.fraction.short=\u0414\u0440\u0456\u0431\u043D\u0430<br>\u0444\u0440\u0430\u043A\u0446\u0456\u044F
 extraction.crude.miscellas=\u041A\u043E\u043D\u0446\u0435\u043D\u0442\u0440\u0430\u0446\u0456\u044F \u043C\u0456\u0441\u0446\u0435\u043B\u0456
 extraction.crude.miscellas.short=\u041A\u043E\u043D\u0446. \u043C\u0438\u0441\u0446\u0435\u043B\u0456
-extraction.crude.humidity=\u041C.\u0447. \u0432\u043E\u043B\u043E\u0433\u0438
-extraction.crude.humidity.short=% \u0432\u043E\u043B\u043E\u0433\u0438
-extraction.crude.dissolvent=% \u0440\u043E\u0437\u0447\u0438\u043D\u043D\u0438\u043A\u0430
-extraction.crude.dissolvent.short=% \u0440\u043E\u0437\u0447-\u043A\u0430
-extraction.crude.grease=\u041C.\u0447. \u0436\u0438\u0440\u0443
+extraction.crude.humidity=\u041C.\u0447. \u0432\u043E\u043B\u043E\u0433\u0438 \u0448\u0440\u043E\u0442\u0443
+extraction.crude.humidity.short=\u0412\u043E\u043B\u043E\u0433\u0430<br>\u0448\u0440\u043E\u0442\u0443
+extraction.crude.dissolvent=% \u0440\u043E\u0437\u0447\u0438\u043D\u043D\u0438\u043A\u0430 \u0432 \u0448\u0440\u043E\u0442\u0456
+extraction.crude.dissolvent.short=% \u0440\u043E\u0437\u0447\u0438\u043D\u043D\u0438\u043A\u0430<br>\u0432 \u0448\u0440\u043E\u0442\u0456
+extraction.crude.grease.short=\u0416\u0438\u0440\u0443<br>\u0448\u0440\u043E\u0442\u0443
+extraction.crude.grease=\u041C.\u0447. \u0436\u0438\u0440\u0443 \u0432 \u0448\u0440\u043E\u0442\u0456
 title.extraction.oil.edit=\u042D\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0438\u043E\u043D\u043D\u043E\u0435 \u043E\u043B\u0456\u044F
 extraction.oil.explosion=t<SUP>o</SUP>C \u0441\u043F\u0430\u043B\u0430\u0445\u0443
+extraction.crude.explosion.short=t<SUP>o</SUP>C<br>\u0441\u043F\u0430\u043B\u0430\u0445\u0443
 vro.crude=\u0410\u043D\u0430\u043B\u0456\u0437 \u0441\u0438\u0440\u043E\u0432\u0438\u043D\u0438
 vro.sun.before=\u041D\u0430\u0441\u0456\u043D\u043D\u044F \u0434\u043E \u043E\u0447\u0438\u0441\u0442\u043A\u0438
 vro.sun.after=\u041D\u0430\u0441\u0456\u043D\u043D\u044F \u043F\u0456\u0441\u043B\u044F \u043E\u0447\u0438\u0441\u0442\u043A\u0438
@@ -575,3 +577,14 @@ select.date=\u0427\u0430\u0441 \u0432\u0456\u0434\u0431\u043E\u0440\u0443
 hours=\u0413\u043E\u0434\u0438\u043D\u0438
 minutes=\u0425\u0432.
 extraction.oil.humidity=\u0412\u043E\u043B\u043E\u0433\u0430 \u0435\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0456\u0439\u043D\u043E\u0457 \u043E\u043B\u0456\u0457
+vro.turn.analyses=\u0417\u043C\u0456\u043D\u043D\u0456 \u0430\u043D\u0430\u043B\u0456\u0437\u0438
+wet.indicator.br=\u0421\u0438\u0440\u0438\u0439<br>\u043F\u043E\u043A\u0430\u0437\u043D\u0438\u043A
+dry.indicator.br=\u041F\u043E\u043A\u0430\u0437\u043D\u0438\u043A<br>\u043D\u0430 \u0410.\u0421.\u0420.
+wet.indicator=\u0421\u0438\u0440\u0438\u0439 \u043F\u043E\u043A\u0430\u0437\u043D\u0438\u043A
+dry.indicator=\u041F\u043E\u043A\u0430\u0437\u043D\u0438\u043A \u043D\u0430 \u0410.\u0421.\u0420.
+extraction.crude.oilines.income=\u041C.\u0427.\u041E \u0444\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u043E\u0457 \u043C\u0430\u043A\u0443\u0445\u0438
+extraction.crude.oilines.income.short=\u041C.\u0427.\u041E.<br>\u043C\u0430\u043A\u0443\u0445\u0438
+extraction.crude.oil.humidity.short=\u0412\u043E\u043B\u043E\u0433\u0430<br>\u0435\u043A\u0441. \u043E\u043B\u0456\u0457
+oil.degrease.impurity=\u041C.\u0427. \u043D\u0435\u0436\u0438\u0440\u043E\u0432\u0438\u0445 \u0434\u043E\u043C\u0456\u0448\u043E\u043A
+oil.transparency=\u0421\u0442\u0443\u043F\u0456\u043D\u044C \u043F\u0440\u043E\u0437\u043E\u0440\u043E\u0441\u0442\u0456
+oil.benzopyrene=\u0411\u0435\u043D\u0437\u043E(\u0430)\u043F\u0456\u0440\u0435\u043D
