--- a/server/src/main/resources/messages_ua.properties
+++ b/server/src/main/resources/messages_ua.properties
@@ -381,7 +381,7 @@ extraction.humidity.income=\u0412\u043E\u043B\u043E\u0433\u0430 \u0432\u0445\u04
 extraction.fraction=\u0414\u0440\u0456\u0431\u043D\u0430 \u0444\u0440\u0430\u043A\u0446\u0456\u044F \u0432 \u0444\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u0456\u0439 \u043C\u0430\u043A\u0443\u0441\u0456: %1$s
 extraction.dissolvent=\u0412\u043C\u0456\u0441\u0442 \u0433\u0435\u043A\u0441\u0430\u043D\u0443 \u0432 \u0448\u0440\u043E\u0442\u0456: %1$s
 extraction.miscellas=\u041A\u043E\u043D\u0446\u0435\u043D\u0442\u0440\u0430\u0446\u0456\u044F \u043C\u0456\u0441\u0446\u0435\u043B\u0456: %1$s
-extraction.humidity=\u0412\u043E\u043B\u043E\u0433\u0430 \u0448\u0440\u0443\u0442\u0443: %1$s
+extraction.humidity=\u0412\u043E\u043B\u043E\u0433\u0430 \u0448\u0440\u043E\u0442\u0443: %1$s
 extraction.oiliness=\u041C.\u0427.\u041E \u0432 \u0448\u0440\u043E\u0442\u0456: %1$s
 extraction.meal=\u0428\u0440\u043E\u0442
 notification.vro.title=\#    \u0426\u0435\u0445 \u0412\u0420\u041E    \#
@@ -416,7 +416,8 @@ extraction.oil.explosion.t=\u0422\u0435\u043C\u043F\u0435\u0440\u0430\u0442\u044
 extraction.turn.protein.title=#    \u041F\u0440\u043E\u0442\u0435\u0457\u043D \u0437\u0430 \u0437\u043C\u0456\u043D\u0443    #
 extraction.turn.protein.turn=\u0417\u043C\u0456\u043D\u0430 #%1$s \u0437\u0430 %2$s
 extraction.turn.protein.protein=\u0421\u0438\u0440\u0438\u0439 \u043F\u0440\u043E\u0442\u0435\u0457\u043D: %1$s
-extraction.turn.protein.nmr=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u043F\u043E \u042F\u041C\u0420
+extraction.turn.protein.nmr=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u043F\u043E \u042F\u041C\u0420: %1$s
+extraction.turn.protein.dry=\u041F\u0435\u0440\u0435\u0440\u0430\u0445\u0443\u043D\u043E\u043A \u043D\u0430 \u0410.\u0421.\u0420: %1$,.2f
 extraction.turn.protein.humidity=\u0412\u043E\u043B\u043E\u0433\u0430: %1$s
 menu.extraction.turn.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D \u0437\u0430 \u0437\u043C\u0456\u043D\u0443
 menu.extraction.storage.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0456
@@ -453,6 +454,7 @@ notification.kpo.organoleptic=\u041E\u0440\u0433\u0430\u043D\u043E\u043B\u0435\u
 notification.kpo.organoleptic.yes=\u0412\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u044E\u0442\u044C \u041D\u0414
 notification.kpo.organoleptic.no=\u043D\u0435 \u0432\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u044E\u0442\u044C \u041D\u0414
 notification.kpo.acid=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u0435 \u0447\u0438\u0441\u043B\u043E\: %s
+notification.weight.correction=\u0412\u0456\u0434\u0441\u043E\u0442\u043E\u043A \u043F\u0435\u0440\u0435\u0440\u0430\u0445\u0443\u043D\u043A\u0443\: %s
 notification.kpo.peroxide=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u0435 \u0447\u0438\u0441\u043B\u043E\: %s
 notification.kpo.soap=\u041C\u0438\u043B\u043E (\u044F\u043A\u0456\u0441\u043D\u0430 \u043F\u0440\u043E\u0431\u0430)\: %s
 notification.kpo.soap.yes=\u0412\u0456\u0434\u0441\u0443\u0442\u043D\u0454
@@ -494,6 +496,8 @@ role.security=\u041E\u0445\u043E\u0440\u043E\u043D\u043D\u0438\u043A
 role.securitys=\u041E\u0445\u043E\u0440\u043E\u043D\u0430
 role.weigher=\u0412\u0430\u0433\u0430\u0440-\u043E\u0431\u043B\u0456\u043A\u043E\u0432\u0435\u0446\u044C
 role.weighers=\u0412\u0430\u0433\u0430\u0440\u0456-\u043E\u0431\u043B\u0456\u043A\u043E\u0432\u0446\u0456
+role.warehousing=\u041F\u0440\u0438\u0439\u043C\u0430\u043B\u044C\u043D\u0438\u043A-\u0437\u0430\u0432\u0430\u043B\u044C\u043D\u0438\u043A
+role.warehousings=\u041F\u0440\u0438\u0439\u043C\u0430\u043B\u044C\u043D\u0438\u043A\u0438-\u0437\u0434\u0430\u0432\u0430\u043B\u044C\u043D\u0438\u043A\u0438
 role.analyser=\u0425\u0456\u043C\u0456\u043A-\u043B\u0430\u0431\u043E\u0440\u0430\u043D\u0442
 bot.user.registration.title=*\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430*
 bot.user.registration.registrator=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0442\u043E\u0440\: %1$s
