--- a/server/src/main/resources/messages_ua.properties
+++ b/server/src/main/resources/messages_ua.properties
@@ -311,7 +311,7 @@ bot.notificator.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D: %1$,.2f
 bot.notificator.cellulose=\u041A\u043B\u0456\u0442\u043A\u043E\u0432\u0438\u043D\u0430: %1$,.2f
 bot.notificator.oil.impurity=\u041E\u043B\u0456\u0439\u043D\u0430 \u0434\u043E\u043C\u0456\u0448\u043A\u0430: %1$,.2f
 bot.notificator.oil.acid=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$,.2f
-bot.notificator.color=\u041A\u043E\u043B\u0456\u0440\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %d
+bot.notificator.color=\u041A\u043E\u043B\u0456\u0440\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %,.1f
 bot.notificator.peroxide=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$,.2f
 bot.notificator.phosphorus=\u0424\u043E\u0441\u0444\u043E\u0440\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$,.2f
 bot.notificator.soap=\u041C\u0438\u043B\u043E (\u044F\u043A\u0456\u0441\u043D\u0430 \u043F\u0440\u043E\u0431\u0430): %1$s
