--- a/server/src/main/resources/messages_ua.properties
+++ b/server/src/main/resources/messages_ua.properties
@@ -310,6 +310,7 @@ bot.notificator.soreness=\u0421\u043C\u0456\u0442\u0442\u0454\u0432\u0430 \u0434
 bot.notificator.oiliness=\u041E\u043B\u0456\u0439\u043D\u0456\u0441\u0442\u044C: %1$,.2f
 bot.notificator.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D: %1$,.2f
 bot.notificator.cellulose=\u041A\u043B\u0456\u0442\u043A\u043E\u0432\u0438\u043D\u0430: %1$,.2f
+bot.notificator.raw.cellulose=\u0421\u0438\u0440\u0430 \u043A\u043B\u0456\u0442\u043A\u043E\u0432\u0438\u043D\u0430: %1$,.2f
 bot.notificator.oil.impurity=\u041E\u043B\u0456\u0439\u043D\u0430 \u0434\u043E\u043C\u0456\u0448\u043A\u0430: %1$,.2f
 bot.notificator.oil.acid=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$,.2f
 bot.notificator.color=\u041A\u043E\u043B\u0456\u0440\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %,.1f
@@ -372,7 +373,7 @@ extraction.oiliness.income=\u041C.\u0427.\u041E. \u0432\u0445\u0456\u0434\u043D\
 extraction.fraction=\u0414\u0440\u0456\u0431\u043D\u0430 \u0444\u0440\u0430\u043A\u0446\u0456\u044F \u0432 \u0444\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u0456\u0439 \u043C\u0430\u043A\u0443\u0441\u0456: *%1$s*
 extraction.dissolvent=\u0412\u043C\u0456\u0441\u0442 \u0433\u0435\u043A\u0441\u0430\u043D\u0443 \u0432 \u0448\u0440\u043E\u0442\u0456: *%1$s*
 extraction.miscellas=\u041A\u043E\u043D\u0446\u0435\u043D\u0442\u0440\u0430\u0446\u0456\u044F \u043C\u0456\u0441\u0446\u0435\u043B\u0456: *%1$s*
-extraction.humidity=\u0412\u043E\u043B\u043E\u0433\u0430 \u0448\u0440\u043E\u0442\u0443: *%1$s*
+extraction.humidity=\u041C.\u0447.\u0432\u043E\u043B\u043E\u0433\u0438 \u0448\u0440\u043E\u0442\u0443: *%1$s*
 extraction.oiliness=\u041C.\u0427.\u041E \u0432 \u0448\u0440\u043E\u0442\u0456: *%1$s*
 extraction.oil.explosion.t=\u0422\u0435\u043C\u043F\u0435\u0440\u0430\u0442\u0443\u0440\u0430 \u0441\u043F\u0430\u043B\u0430\u0445\u0443 \u0435\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0456\u0439\u043D\u043E\u0457 \u043E\u043B\u0456\u0457: *%1$s*
 extraction.meal=\u0428\u0440\u043E\u0442
@@ -398,22 +399,25 @@ extraction.raw.protein=\u0421\u0438\u0440\u0438\u0439 \u043F\u0440\u043E\u0442\u
 extraction.storage.protein.title=%1$s, %2$s
 extraction.storage.protein=\u0421\u0438\u0440\u0438\u0439 \u043F\u0440\u043E\u0442\u0435\u0457\u043D: %1$s
 extraction.storage.humidity=\u0412\u043E\u043B\u043E\u0433\u0430: %1$s
-extraction.oil.title=#    \u0415\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0456\u0439\u043D\u0430 \u043E\u043B\u0456\u044F    #
-vro.oil.title=#    \u041F\u0440\u0435\u0441\u043E\u0432\u0430 \u043E\u043B\u0456\u044F    #
-vro.granules.title=#    \u041F\u0430\u043B\u0438\u0432\u043D\u0456 \u0433\u0440\u0430\u043D\u0443\u043B\u0438    #
+extraction.oil.title=#    *\u0415\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0456\u0439\u043D\u0430 \u043E\u043B\u0456\u044F*    #
+vro.oil.title=#    *\u041F\u0440\u0435\u0441\u043E\u0432\u0430 \u043E\u043B\u0456\u044F*    #
+vro.granules.title=#    *\u041F\u0430\u043B\u0438\u0432\u043D\u0456 \u0433\u0440\u0430\u043D\u0443\u043B\u0438*    #
+extraction.turn.cellulose=#    *\u041A\u043B\u0456\u0442\u043A\u043E\u0432\u0438\u043D\u0430 \u0437\u0430 \u0437\u043C\u0456\u043D\u0443*    #
 bot.notificator.granules.density=\u041E\u0431'\u0454\u043C\u043D\u0430 (\u043D\u0430\u0441\u0438\u043F\u043D\u0430) \u0449\u0456\u043B\u044C\u043D\u0456\u0441\u0442\u044C: %1$s
 notificator.granules.dust=\u041A\u0456\u043B\u044C\u043A\u0456\u0441\u0442\u044C \u043E\u0441\u0438\u043F\u0443 \u0442\u0430 \u043F\u0438\u043B\u0443: %1$s
 extraction.oil.turn=\u0417\u043C\u0456\u043D\u0430 #%1$s \u0437\u0430 %2$s
+vra.granules=\u0417\u0430 %1$s
 bot.extraction.oil.humidity=\u041C.\u0427. \u0432\u043E\u043B\u043E\u0433\u0438: %1$s
 extraction.oil.acid.value=\u041A\u0438\u0441\u043B\u043E\u0442\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
 extraction.oil.peroxide.value=\u041F\u0435\u0440\u0435\u043A\u0438\u0441\u043D\u0435 \u0447\u0438\u0441\u043B\u043E: %1$s
 extraction.oil.phosphorus.value=\u041C.\u0447.\u0444: %1$s
-
 extraction.turn.protein.title=#    \u041F\u0440\u043E\u0442\u0435\u0457\u043D \u0437\u0430 \u0437\u043C\u0456\u043D\u0443    #
+vro.sun.protein.title=#    \u041F\u0440\u043E\u0442\u0435\u0457\u043D \u043D\u0430\u0441\u0456\u043D\u043D\u044F    #
 extraction.turn.protein.turn=\u0417\u043C\u0456\u043D\u0430 #%1$s \u0437\u0430 %2$s
 extraction.turn.protein.protein=\u0421\u0438\u0440\u0438\u0439 \u043F\u0440\u043E\u0442\u0435\u0457\u043D: %1$s
 extraction.turn.protein.nmr=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u043F\u043E \u042F\u041C\u0420: %1$s
 extraction.turn.protein.dry=\u041F\u0435\u0440\u0435\u0440\u0430\u0445\u0443\u043D\u043E\u043A \u043D\u0430 \u0410.\u0421.\u0420: %1$,.2f
+extraction.turn.cellulose.dry=\u0421\u0438\u0440\u0430 \u043A\u043B\u0456\u0442\u043A\u043E\u0432\u0438\u043D\u0430 \u043D\u0430 \u0410.\u0421.\u0420: %1$,.2f
 extraction.turn.protein.humidity=\u0412\u043E\u043B\u043E\u0433\u0430: %1$s
 menu.extraction.turn.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D \u0437\u0430 \u0437\u043C\u0456\u043D\u0443
 menu.extraction.storage.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0456
@@ -425,7 +429,7 @@ title.extraction.storage.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u044
 extraction.turn.grease.title=#    \u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u0437\u0430 \u0437\u043C\u0456\u043D\u0443     #
 extraction.turn.grease.grease=\u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440: %1$s
 extraction.storage.grease.title=#    \u0421\u0438\u0440\u0438\u0439 \u0436\u0438\u0440 \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0456    #
-notification.forpress.cake.title=\#    \u0424\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u0430 \u043C\u0430\u043A\u0443\u0445\u0430    \#
+notification.forpress.cake.title=#    \u0424\u043E\u0440\u043F\u0440\u0435\u0441\u043E\u0432\u0430 \u043C\u0430\u043A\u0443\u0445\u0430    #
 print.daily.report=\u0414\u043E\u0431\u043E\u0432\u0438\u0439 \u0437\u0432\u0456\u0442
 title.extraction.daily.report.print=\u0414\u0440\u0443\u043A \u0434\u043E\u0431\u043E\u0432\u043E\u0433\u043E \u0437\u0432\u0456\u0442\u0443
 oil.mass.fraction=\u041C\u0430\u0441\u043E\u0432\u0430 \u0447\u0430\u0441\u0442\u043A\u0430 \u043E\u043B\u0456\u0457
@@ -443,6 +447,7 @@ vro.daily.oil.mass=\u041C\u0430\u0441\u043E\u0432\u0430 \u0447\u0430\u0441\u0442
 vro.daily.oil.mass.dry=\u041C\u0430\u0441\u0441\u043E\u0432\u0430\u044F \u0434\u043E\u043B\u044F \u043C\u0430\u0441\u043B\u0430 \u043D\u0430 \u0441\u0443\u0445\u043E\u0435 \u0432\u0435\u0449\u0435\u0441\u0442\u0432\u043E
 vro.part=\u0412\u0430\u0440\u043A\u0430
 title.vro.part.edit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043D\u043D\u044F \u0432\u0430\u0440\u043A\u0438
+title.vro.sun.protein=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043D\u043D\u044F \u043F\u0440\u043E\u0442\u0435\u0457\u043D\u0443 \u043D\u0430\u0441\u0456\u043D\u043D\u044F
 oil.soap.yes=\u041F\u0440\u0438\u0441\u0443\u0442\u043D\u0454
 oil.soap.no=\u0412\u0456\u0434\u0441\u0443\u0442\u043D\u0454
 notification.kpo.title=\#       *\u041F\u0430\u0440\u0442\u0456\u044F \#%1$s*        \#
@@ -496,6 +501,8 @@ role.weigher=\u0412\u0430\u0433\u0430\u0440-\u043E\u0431\u043B\u0456\u043A\u043E
 role.weighers=\u0412\u0430\u0433\u0430\u0440\u0456-\u043E\u0431\u043B\u0456\u043A\u043E\u0432\u0446\u0456
 role.warehousing=\u041F\u0440\u0438\u0439\u043C\u0430\u043B\u044C\u043D\u0438\u043A-\u0437\u0430\u0432\u0430\u043B\u044C\u043D\u0438\u043A
 role.warehousings=\u041F\u0440\u0438\u0439\u043C\u0430\u043B\u044C\u043D\u0438\u043A\u0438-\u0437\u0434\u0430\u0432\u0430\u043B\u044C\u043D\u0438\u043A\u0438
+role.mihalych=\u041C\u0438\u0445\u0430\u043B\u0438\u0447
+role.mihalychs=\u041C\u0438\u0445\u0430\u043B\u0438\u0447\u0456
 role.analyser=\u0425\u0456\u043C\u0456\u043A-\u043B\u0430\u0431\u043E\u0440\u0430\u043D\u0442
 bot.user.registration.title=*\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430*
 bot.user.registration.registrator=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0442\u043E\u0440\: %1$s
@@ -659,3 +666,7 @@ vro.volume.density=\u041E\u0431'\u0454\u043C\u043D\u0430 \u0449\u0456\u043B\u044
 dust=\u041A\u0456\u043B\u044C\u043A\u0456\u0441\u0442\u044C \u043E\u0441\u0438\u043F\u0443 \u0442\u0430 \u043F\u0438\u043B\u0443
 match.dstu=\u0412\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u0454 \u0414\u0421\u0422\u0423
 dsnt.match.dstu=\u041D\u0435 \u0432\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u0454 \u0414\u0421\u0422\u0423
+menu.vro.sun.protein=\u041F\u0440\u043E\u0442\u0435\u0457\u043D \u043D\u0430\u0441\u0456\u043D\u043D\u044F
+storage.analyses=\u0410\u043D\u0430\u043B\u0456\u0437\u0438 \u043D\u0430 \u0441\u043A\u043B\u0430\u0434\u0456
+menu.extraction.turn.cellulose=\u041A\u043B\u0456\u0442\u043A\u043E\u0432\u0438\u043D\u0430 \u0437\u0430 \u0437\u043C\u0456\u043D\u0443
+raw.cellulose=\u0421\u0438\u0440\u0430 \u043A\u043B\u0456\u0442\u043A\u043E\u0432\u0438\u043D\u0430
