--- a/server/src/main/resources/messages_ua.properties
+++ b/server/src/main/resources/messages_ua.properties
@@ -409,9 +409,13 @@ extraction.storage.humidity=\u0412\u043E\u043B\u043E\u0433\u0430: %1$s
 extraction.oil.title=#    *\u0415\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0456\u0439\u043D\u0430 \u043E\u043B\u0456\u044F*    #
 vro.oil.title=#    *\u041F\u0440\u0435\u0441\u043E\u0432\u0430 \u043E\u043B\u0456\u044F*    #
 vro.granules.title=#    *\u041F\u0430\u043B\u0438\u0432\u043D\u0456 \u0433\u0440\u0430\u043D\u0443\u043B\u0438*    #
+extraction.granules.title=#    *\u0428\u0440\u043E\u0442 \u0433\u0440\u0430\u043D\u0443\u043B\u044C\u043E\u0432\u0430\u043D\u0438\u0439*    #
 extraction.turn.cellulose=#    *\u041A\u043B\u0456\u0442\u043A\u043E\u0432\u0438\u043D\u0430 \u0437\u0430 \u0437\u043C\u0456\u043D\u0443*    #
 bot.notificator.granules.density=\u041E\u0431'\u0454\u043C\u043D\u0430 (\u043D\u0430\u0441\u0438\u043F\u043D\u0430) \u0449\u0456\u043B\u044C\u043D\u0456\u0441\u0442\u044C: %1$s
 notificator.granules.dust=\u041A\u0456\u043B\u044C\u043A\u0456\u0441\u0442\u044C \u043E\u0441\u0438\u043F\u0443 \u0442\u0430 \u043F\u0438\u043B\u0443: %1$s
+notificator.granules.scree=\u041A\u0456\u043B\u044C\u043A\u0456\u0441\u0442\u044C \u043E\u0441\u0438\u043F\u0443: %1$s
+bot.notificator.granules.length=\u0414\u043E\u0432\u0436\u0438\u043D\u0430: %1$s
+bot.notificator.granules.diameter=\u0414\u0456\u0430\u043C\u0435\u0442\u0440: %1$s
 extraction.oil.turn=\u0417\u043C\u0456\u043D\u0430 #%1$s \u0437\u0430 %2$s
 vra.granules=\u0417\u0430 %1$s
 bot.extraction.oil.humidity=\u041C.\u0427. \u0432\u043E\u043B\u043E\u0433\u0438: %1$s
@@ -787,3 +791,9 @@ truck.category=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0456\u044F
 title.vehicle.info=\u0406\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0456\u044F \u043F\u0440\u043E \u043C\u0430\u0448\u0438\u043D\u0443
 truck.kind=\u0422\u0438\u043F
 button.check=\u041F\u0435\u0440\u0435\u0432\u0456\u0440\u0438\u0442\u0438
+extraction.meal.granules=\u0428\u0440\u043E\u0442 \u0433\u0440\u0430\u043D\u0443\u043B\u044C\u043E\u0432\u0430\u043D\u0438\u0439
+meal.scree=\u041E\u0441\u0438\u043F
+meal.density=\u0429\u0456\u043B\u044C\u043D\u0456\u0441\u0442\u044C
+meal.length=\u0414\u043E\u0432\u0436\u0438\u043D\u0430
+meal.diameter=\u0414\u0456\u0430\u043C\u0435\u0442\u0440
+title.extraction.turn.granulas=\u0428\u0440\u043E\u0442 \u0433\u0440\u0430\u043D\u0443\u043B\u044C\u043E\u0432\u0430\u043D\u0438\u0439
