--- a/server/src/main/resources/messages_ru.properties
+++ b/server/src/main/resources/messages_ru.properties
@@ -716,3 +716,4 @@ address.district=\u0420\u0430\u0439\u043E\u043D
 address.type=\u0422\u0438\u043F \u0430\u0434\u0440\u0435\u0441\u0438
 address.region.short=\u043E\u0431\u043B.
 address.district.short=\u0440-\u043D
+organisation.full.name=\u041F\u043E\u0432\u043D\u0430 \u043D\u0430\u0437\u0432\u0430
