transport filter update

--- a/server/src/main/resources/messages_ua.properties
+++ b/server/src/main/resources/messages_ua.properties
@@ -177,7 +177,7 @@ extraction.crude.dissolvent=% \u0440\u043E\u0437\u0447\u0438\u043D\u043D\u0438\u
 extraction.crude.dissolvent.short=% \u0440\u043E\u0437\u0447\u0438\u043D\u043D\u0438\u043A\u0430<br>\u0432 \u0448\u0440\u043E\u0442\u0456
 extraction.crude.grease.short=\u0416\u0438\u0440\u0443<br>\u0448\u0440\u043E\u0442\u0443
 extraction.crude.grease=\u041C.\u0447. \u0436\u0438\u0440\u0443 \u0432 \u0448\u0440\u043E\u0442\u0456
-title.extraction.oil.edit=\u042D\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0438\u043E\u043D\u043D\u043E\u0435 \u043E\u043B\u0456\u044F
+title.extraction.oil.edit=\u0410\u043D\u0430\u043B\u0456\u0437 \u0435\u043A\u0441\u0442\u0440\u0430\u043A\u0446\u0456\u0439\u043D\u043E\u0457 \u043E\u043B\u0456\u0457
 extraction.oil.explosion=t<SUP>o</SUP>C \u0441\u043F\u0430\u043B\u0430\u0445\u0443
 extraction.crude.explosion.short=t<SUP>o</SUP>C<br>\u0441\u043F\u0430\u043B\u0430\u0445\u0443
 vro.crude=\u0410\u043D\u0430\u043B\u0456\u0437 \u0441\u0438\u0440\u043E\u0432\u0438\u043D\u0438
