--- a/spedition/untitled/src/main/resources/messages_uk.properties
+++ b/spedition/untitled/src/main/resources/messages_uk.properties
@@ -1,3 +1,20 @@
+button.close=Закрити
+date=Дата
+date.arrive=Час прибуття
+date.done=Період відрядження
+date.leave=Дата виїзду
+driver=Водій
+expenses=Додаткові витрати
+fare=Проїзд
+money=Контрагенту передано
+money.get=Від контрагента отримано
+money.spending=Витрата коштів
 password=Пароль
 phone=Телефон
+product=Продукт
+report.point=Точка
+route=Маршрут
 sign.in=Вхід
+day.1=Доба
+day.2=Доби
+day.5=Діб
