--- a/spedition/SpeditionClient/app/src/main/res/values/strings.xml
+++ b/spedition/SpeditionClient/app/src/main/res/values/strings.xml
@@ -65,7 +65,7 @@
     <string name="fares">Витрати на проїзд</string>
     <string name="fixLeaveTime">Зафіксувати час виїзду</string>
     <string name="done_report_title">Завершення відрядження</string>
-    <string name="done_report_message">Встановити відмітку про завершення відрядження?</string>
+    <string name="done_report_message">Встановити дату завершення відрядження?</string>
     <string name="no_title">Не всі обов’язкові поля заповнені</string>
     <string name="fields">Точки відвантаження</string>
     <string name="surname">Прізвище</string>
@@ -74,4 +74,5 @@
     <string name="show_title">Перегляд</string>
     <string name="addBaseWeight">Вага на заводі</string>
     <string name="weightTitle">Редагування ваги</string>
+    <string name="copy">Копіювати</string>
 </resources>
